# Karaoke

./: .gitignore  README.md
FinalRelease/: vision文档.docx  ~$sion文档.docx  ~$软件需求规约.docx  用例模型、设计与分析模型.oob  系统测试报告.docx  系统测试用例.xlsx  软件架构文档.docx  项目总结报告_简化版.docx
FinalRelease/code/Karaoke/PianoRater/src/main/cpp/: CMakeLists.txt  pianoRater.h  setting.h
FinalRelease/docs/: 用例模型、设计与分析模型.oob  用例模型、设计与分析模型.oom  软件需求规约.docx
FinalRelease/docs/单元测试报告/: TestResults_test_delete_song.TestDeleteSong_2021-06-25_03-35-18.html  TestResults_test_get_file.TestGetFile_2021-06-25_03-35-18.html  TestResults_test_get_song_info.TestGetSongInfo_2021-06-25_03-35-18.html  TestResults_test_login.TestLogin_2021-06-25_03-35-18.html  TestResults_test_update_song_info.TestUpdateSongInfo_2021-06-25_03-35-18.html
FinalRelease/docs/单元测试源代码/: test_delete_song.py  test_get_song_info.py
FinalRelease/单元测试报告/: TestResults_test_get_songs.TestGetSongs_2021-06-25_03-35-18.html
Project/Karaoke/: build.gradle  settings.gradle
Project/Karaoke/LrcView/: build.gradle
Project/Karaoke/Recorder/: build.gradle
Project/Karaoke/SingRater/: build.gradle
Project/Karaoke/app/: build.gradle
Project/Karaoke/droidparticle/: build.gradle  proguard-rules.pro
Project/Karaoke/recorder/: build.gradle
Project/Karaoke/waveditor/: build.gradle
Project/WebUpload/: karaoke.sql
Project/WebUpload/client/: .env  package-lock.json  package.json
Project/WebUpload/server/: README.md  app.py  config.py  server.sh  (+2 more)
SingRateLab/: 命令行参数.txt
SingRateLab/hello-libs/: local.properties
SingRateLab/hello-libs/app/src/main/cpp/: CMakeLists.txt  interface.cpp  jyz.h
TechPrototype/: Vision doc-v1.2.docx  vision doc-v1.1.docx  技术原型迭代评估报告.docx  用例模型、设计与分析模型.oom  界面原型迭代评估报告.docx  软件架构文档.docx  软件需求规约.docx
UIPrototype/: 用例模型.oom
UIPrototype/Karaoke/: local.properties
(+340 files in other folders)
